# picalc

./: CMakeLists.txt  main.cpp
